# hops

./: .env.example  Cargo.toml  README.md  docker-compose.yml  justfile  private.pem  public.pem
config/: development.toml  production.toml  test.toml
examples/: comms_example.rs  phone_signup_example.rs
migrations/: 0001_init.down.sql  0001_init.up.sql
pgadmin/: servers.json
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/adapters/: comms.rs  crypto.rs  mod.rs
src/adapters/auth/: adapter.rs  models.rs
src/adapters/auth0/: client.rs  mod.rs  models.rs
src/adapters/comms/: adapter.rs  client.rs  models.rs
src/adapters/postgres/: audit_repository.rs  auth_repository.rs  database.rs  mod.rs  user_repository.rs
src/adapters/user/: adapter.rs
src/db/: audit.rs  auth.rs  mod.rs  otp.rs  user.rs  users.rs
src/domain/: audit.rs  error.rs  mod.rs  state.rs  user.rs
src/handlers/: audit.rs  auth.rs  middleware.rs  mod.rs  user.rs
src/models/: audit.rs  auth.rs  comms.rs  mod.rs  otp.rs  user.rs
src/ports/: audit_repository.rs  auth_port.rs  auth_repository.rs  comms.rs  comms_port.rs  crypto.rs  mod.rs  user_repository.rs
src/presentation/: audit.rs  auth.rs  middleware.rs  mod.rs  user.rs
src/services/: auth.rs
