[package]
name = "hops"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
config = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = { version = "0.4.45", features = ["serde"]}
toml = "1.1.2"
axum = "0.8.9"
once_cell = "1.21.4"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
base64 = "0.22.1"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"

[[example]]
name = "comms_example"
path = "examples/comms_example.rs"

[[example]]
name = "phone_signup_example"
path = "examples/phone_signup_example.rs"
